--- a/store.html
+++ b/store.html
@@ -27,16 +27,19 @@
       <div class="hd">
         <div>
           <h2>Storefront (Internal View)</h2>
-          <div class="sub">Shows sellable items only: <b>AVAILABLE</b> + <b>LISTED</b></div>
+          <div class="sub">Shows sellable items only: <b>AVAILABLE</b> + <b>LISTED</b> (flex match)</div>
         </div>
       </div>
+
       <div class="bd">
         <div class="controls">
           <select class="select" id="tabSel">
             <option value="Inventory_Retail">Retail</option>
             <option value="Inventory_Parts">Parts</option>
           </select>
+
           <input class="input" id="q" placeholder="Search title / sku / model…" />
+
           <button class="btn primary" id="btnLoad">Load</button>
         </div>
 
@@ -48,7 +51,12 @@
           <table class="table">
             <thead>
               <tr>
-                <th>SKU</th><th>Title</th><th>Status</th><th>Location</th><th>Price</th><th>Notes</th>
+                <th>SKU</th>
+                <th>Title</th>
+                <th>Status</th>
+                <th>Location</th>
+                <th>Price</th>
+                <th>Notes</th>
               </tr>
             </thead>
             <tbody id="tbody"></tbody>
@@ -58,80 +66,97 @@
     </div>
   </main>
 
-<script src="./app.js"></script>
-<script>
-/** -------------------------
- * Safety fallbacks (won’t override your app.js if it already defines these)
- * ------------------------- */
-window.qs = window.qs || ((sel, root=document)=>root.querySelector(sel));
-window.escHtml = window.escHtml || ((s)=>String(s??"")
-  .replaceAll("&","&amp;").replaceAll("<","&lt;").replaceAll(">","&gt;").replaceAll('"',"&quot;"));
-window.toast = window.toast || ((msg)=>console.log(msg));
+  <script src="./app.js"></script>
+  <script>
+    /* -------------------------
+      Hardening / fallbacks so this page never silently dies
+      (won't override your app.js if it's already defining these)
+    ------------------------- */
+    window.qs = window.qs || ((sel, root=document)=>root.querySelector(sel));
+    window.escHtml = window.escHtml || ((s)=>String(s ?? "")
+      .replaceAll("&","&amp;")
+      .replaceAll("<","&lt;")
+      .replaceAll(">","&gt;")
+      .replaceAll('"',"&quot;"));
+    window.toast = window.toast || ((msg)=>console.log(msg));
 
-/** If app.js has isSellableStatus, cool.
-    But store page should match the stated rule: AVAILABLE + LISTED. */
-function isSellableHere(status){
-  const st = String(status||"").trim().toUpperCase();
-  return st === "AVAILABLE" || st === "LISTED";
-}
+    // Pinned logo URL (stable)
+    qs("#logo").src = "https://raw.githubusercontent.com/tekpakinc/tekpak-site/b8d52da6ac61c4f06d12cd8b9253cb6103b8dad9/tekpak-logo.png";
 
-qs("#logo").src = "https://raw.githubusercontent.com/tekpakinc/tekpak-site/b8d52da6ac61c4f06d12cd8b9253cb6103b8dad9/tekpak-logo.png";
+    /* Sellable status logic:
+       - We want cross-platform sync, so we treat anything containing "AVAILABLE" or "LISTED" as sellable.
+       - Case-insensitive and tolerant of variations like "AVAILABLE - SHELF" / "LISTED - LIVE"
+    */
+    function isSellableHere(status){
+      const st = String(status || "").trim().toUpperCase();
+      return st.includes("AVAILABLE") || st.includes("LISTED");
+    }
 
-/** Render rows */
-function renderRows(items){
-  const sellable = (items || []).filter(it => {
-    // Prefer hard rule. If you WANT to allow app.js logic too, flip this.
-    return isSellableHere(it.Status);
-  });
+    function pillClassForStatus(status){
+      return isSellableHere(status) ? "good" : "warn";
+    }
 
-  qs("#meta").textContent = `Showing ${sellable.length} sellable item(s) (AVAILABLE/LISTED).`;
+    function renderRows(items){
+      const sellable = (items || []).filter(it => isSellableHere(it.Status));
 
-  qs("#tbody").innerHTML = sellable.map(it => {
-    const st = String(it.Status||"").toUpperCase();
-    const cls = isSellableHere(st) ? "good" : "warn";
-    return `<tr>
-      <td class="mono">${escHtml(it.TP_SKU || "")}</td>
-      <td>${escHtml(it.Title || "")}</td>
-      <td><span class="pill ${cls}">${escHtml(st)}</span></td>
-      <td class="mono">${escHtml(it.Yard_Location || "")}</td>
-      <td>${escHtml(it.List_Price || "")}</td>
-      <td>${escHtml(it.Cosmetic_Notes || it.Notes_Internal || "")}</td>
-    </tr>`;
-  }).join("");
+      qs("#meta").textContent = `Showing ${sellable.length} sellable item(s) from ${qs("#tabSel").value}.`;
 
-  if (!sellable.length){
-    qs("#tbody").innerHTML = `<tr><td colspan="6" class="small" style="opacity:.8; padding:14px;">
-      No sellable items found in this tab (AVAILABLE/LISTED).
-    </td></tr>`;
-  }
-}
+      if (!sellable.length){
+        qs("#tbody").innerHTML = `
+          <tr>
+            <td colspan="6" class="small" style="opacity:.85; padding:14px;">
+              No sellable items found (status must include AVAILABLE or LISTED).
+            </td>
+          </tr>
+        `;
+        return;
+      }
 
-async function load(){
-  const tab = qs("#tabSel").value;
-  const q = qs("#q").value.trim();
+      qs("#tbody").innerHTML = sellable.map(it => {
+        const st = String(it.Status || "").trim().toUpperCase();
+        const cls = pillClassForStatus(st);
 
-  qs("#meta").textContent = `Loading ${tab}…`;
-  qs("#tbody").innerHTML = "";
+        return `<tr>
+          <td class="mono">${escHtml(it.TP_SKU || "")}</td>
+          <td>${escHtml(it.Title || "")}</td>
+          <td><span class="pill ${cls}">${escHtml(st || "—")}</span></td>
+          <td class="mono">${escHtml(it.Yard_Location || "")}</td>
+          <td>${escHtml(it.List_Price || "")}</td>
+          <td>${escHtml(it.Cosmetic_Notes || it.Notes_Internal || "")}</td>
+        </tr>`;
+      }).join("");
+    }
 
-  try{
-    if (typeof apiGet !== "function") throw new Error("apiGet() is missing (check app.js load path).");
+    async function load(){
+      const tab = qs("#tabSel").value;
+      const q = qs("#q").value.trim();
 
-    const data = await apiGet({ action:"listInventory", tab, q });
-    const items = Array.isArray(data?.items) ? data.items : [];
-    renderRows(items);
-    toast("Store view loaded.");
-  }catch(err){
-    qs("#meta").textContent = `Error loading ${tab}.`;
-    toast(err.message || String(err), "bad");
-  }
-}
+      qs("#meta").textContent = `Loading ${tab}…`;
+      qs("#tbody").innerHTML = "";
 
-qs("#btnLoad").addEventListener("click", load);
-qs("#q").addEventListener("keydown", (e)=>{ if(e.key==="Enter") load(); });
-qs("#tabSel").addEventListener("change", load);
+      try{
+        if (typeof apiGet !== "function") {
+          throw new Error("apiGet() is missing. Check that ./app.js loads correctly on GitHub Pages.");
+        }
 
-// initial load
-load();
-</script>
+        const data = await apiGet({ action:"listInventory", tab, q });
+        const items = Array.isArray(data?.items) ? data.items : [];
+
+        renderRows(items);
+        toast("Store view loaded.");
+      }catch(err){
+        qs("#meta").textContent = `Error loading ${tab}.`;
+        toast(err.message || String(err), "bad");
+      }
+    }
+
+    // Events
+    qs("#btnLoad").addEventListener("click", load);
+    qs("#q").addEventListener("keydown", (e)=>{ if(e.key === "Enter") load(); });
+    qs("#tabSel").addEventListener("change", load);
+
+    // initial load
+    load();
+  </script>
 </body>
 </html>
