--- a/staging.html
+++ b/staging.html
@@ -164,6 +164,7 @@
     <a class="chipNav active" href="./staging.html">Staging</a>
     <a class="chipNav" href="./logistics.html">Logistics</a>
     <button class="miniBtn" onclick="openTpSettings()">TP Settings</button>
+    <button class="miniBtn" onclick="boot(true)">Reconnect</button>
     <button class="primary" onclick="newItem()">+ New TP</button>
   </div>
 </header>
@@ -236,8 +237,9 @@
 
 <script>
 /* ===================== CONFIG ===================== */
-const API_URL = "PASTE_YOUR_WEB_APP_URL_HERE"; // <-- REQUIRED
+const API_URL = "PASTE_YOUR_WEB_APP_URL_HERE"; // <-- REQUIRED: your Apps Script Web App /exec URL
 const API_KEY = ""; // optional: match backend API_KEY if you set one
+const PLACEHOLDER = "PASTE_YOUR_WEB_APP_URL_HERE";
 
 const STAGE = "STAGING";
 const NEXT_STAGE = "LOGISTICS";
@@ -282,13 +284,24 @@ function escapeHtml(s){
 function escapeAttr(s){ return escapeHtml(s).replaceAll("'","&#39;"); }
 function uniq(list){ return [...new Set(list.filter(Boolean))]; }
 
+function toBool(v){
+  const s = String(v ?? "").trim().toLowerCase();
+  return v === true || v === 1 || s === "true" || s === "1" || s === "yes" || s === "y";
+}
+
 function loadPhotos(){ photosDB = JSON.parse(localStorage.getItem(PHOTO_KEY) || "{}"); }
 function savePhotos(){ localStorage.setItem(PHOTO_KEY, JSON.stringify(photosDB)); }
 
 /* ===================== JSONP GET ===================== */
 function apiGet(params){
   return new Promise((resolve, reject)=>{
+    if (!API_URL || API_URL.includes(PLACEHOLDER)){
+      return reject(new Error("API_URL not set. Paste your Apps Script Web App /exec URL into staging.html"));
+    }
+
     const cb = "cb_" + Math.random().toString(36).slice(2);
+    let script = null;
+
     const timeout = setTimeout(()=>{
       cleanup();
       reject(new Error("API timeout"));
@@ -309,7 +322,7 @@ function apiGet(params){
     if (API_KEY) q.set("key", API_KEY);
 
     const url = API_URL + (API_URL.includes("?") ? "&" : "?") + q.toString();
-    const script = document.createElement("script");
+    script = document.createElement("script");
     script.src = url;
     script.onerror = ()=>{ cleanup(); reject(new Error("API load error")); };
     document.head.appendChild(script);
@@ -318,12 +331,16 @@ function apiGet(params){
 
 /* ===================== POST (best for large text) ===================== */
 async function apiPost(action, payload){
+  if (!API_URL || API_URL.includes(PLACEHOLDER)){
+    throw new Error("API_URL not set. Paste your Apps Script Web App /exec URL into staging.html");
+  }
+
   const url = API_URL + (API_URL.includes("?") ? "&" : "?") + new URLSearchParams({
     action,
     ...(API_KEY ? { key: API_KEY } : {})
   }).toString();
 
-  // CORS is limited on Apps Script; use no-cors and then verify with a read.
+  // CORS is limited on Apps Script from GitHub Pages; no-cors is expected here.
   await fetch(url, {
     method: "POST",
     mode: "no-cors",
@@ -331,7 +348,7 @@ async function apiPost(action, payload){
     body: JSON.stringify(payload)
   });
 
-  // Verify by pulling the item back via JSONP
+  // Verify by pulling the item back via JSONP (acts like an "ACK")
   if (payload && payload.TP){
     const res = await apiGet({ action:"readItem", tp: payload.TP });
     return res;
@@ -468,7 +485,7 @@ function renderList(){
     const needs = (!(it.Title||"").toString().trim() || !(it.PriceUSD||"").toString().trim())
       ? ` <span class="pill" style="border-color:rgba(255,209,102,.55)">Needs basics</span>` : "";
     const pcount = (photosDB[it.TP] || []).length;
-    const returnsAccepted = String(it.ReturnsAccepted).toLowerCase() === "true" || it.ReturnsAccepted === true || it.ReturnsAccepted === 1;
+    const returnsAccepted = toBool(it.ReturnsAccepted);
     const returnsLabel = (it.SaleType==="As-Is" || it.SaleType==="Surplus") ? "NO RETURNS" : (returnsAccepted ? "Returns OK" : "As listed");
 
     d.innerHTML = `
@@ -619,7 +636,7 @@ function safeLine(s){ return String(s||"").trim(); }
 
 function returnPolicyLine(it){
   const st = (it.SaleType || "").trim();
-  const returns = !!it.ReturnsAccepted;
+  const returns = toBool(it.ReturnsAccepted);
 
   if (st === "As-Is" || st === "Surplus"){
     return "NO RETURNS: As-Is / Surplus items are sold as-is and are not eligible for returns or warranty unless explicitly stated otherwise in the listing.";
@@ -690,6 +707,9 @@ function formatAgreementForHtml(text){
   return html;
 }
 
+/*
+  eBay-safe HTML (inline styles, minimal fancy).
+*/
 function buildEbayHTML(it, imageUrls, logoUrl){
   const title = safeLine(it.Title) || [it.Brand,it.Model,it.CPU,it.MemoryGB?it.MemoryGB+"GB":"",it.StorageGB?it.StorageGB+"GB":""] .filter(Boolean).join(" ").trim() || it.TP || "Item";
   const desc = safeLine(it.Description);
@@ -797,8 +817,8 @@ async function newItem(){
     ReturnsAccepted: false
   };
   await apiPost("upsertItem", payload);
-  await boot();
-  openItem(tp);
+  await boot(false);
+  await openItem(tp);
   toast("New TP created (sheet)");
 }
 
@@ -813,6 +833,8 @@ async function openItem(tp){
   const osList = dd.OperatingSystem?.length ? dd.OperatingSystem : ["Windows 11","Windows 10","ChromeOS","macOS","Linux","No OS"];
   const warrantyList = dd.Warranty?.length ? dd.Warranty : ["None","7 Day","30 Day","90 Day"];
   const shipList = dd.ShippingPolicy?.length ? dd.ShippingPolicy : ["Free Shipping","Flat Rate","Calculated","Local Pickup"];
+
+  const returnsAccepted = toBool(it.ReturnsAccepted);
 
   document.getElementById("detail").innerHTML = `
     <div class="tpCallout" style="align-items:flex-start;">
@@ -836,7 +858,7 @@ async function openItem(tp){
       <div>
         <div class="lab">Returns Accepted (only if listing allows)</div>
         <div class="checkRow">
-          <label><input type="checkbox" id="f_ReturnsAccepted" ${it.ReturnsAccepted ? "checked" : ""}> Mark returns accepted</label>
+          <label><input type="checkbox" id="f_ReturnsAccepted" ${returnsAccepted ? "checked" : ""}> Mark returns accepted</label>
         </div>
         <div class="hint">As-Is/Surplus will auto-disable returns on save.</div>
       </div>
@@ -909,10 +931,14 @@ async function openItem(tp){
   renderKPIs();
 }
 
-function copyTP(){
+async function copyTP(){
   if (!currentTP) return;
-  navigator.clipboard.writeText(currentTP);
-  toast("TP# copied");
+  try{
+    await navigator.clipboard.writeText(currentTP);
+    toast("TP# copied");
+  }catch{
+    toast("Clipboard blocked (try Ctrl+C on the TP field)");
+  }
 }
 
 async function refreshCurrent(){
@@ -931,14 +957,12 @@ async function applyTPChange(){
   if (!desired) { input.value = currentTP; return toast("TP# can't be blank"); }
   if (desired === currentTP) return toast("TP# unchanged");
 
-  // update sheet key
   const res = await apiGet({ action:"updateTP", oldTp: currentTP, newTp: desired });
   if (!res || !res.ok){
     input.value = currentTP;
     return toast(res?.error || "TP update failed");
   }
 
-  // move photos mapping local
   if (photosDB[currentTP]){
     photosDB[desired] = photosDB[currentTP];
     delete photosDB[currentTP];
@@ -964,7 +988,6 @@ async function save(){
 
   const saleType = document.getElementById("f_SaleType").value || "";
   let returnsAccepted = !!document.getElementById("f_ReturnsAccepted").checked;
-
   if (saleType === "As-Is" || saleType === "Surplus") returnsAccepted = false;
 
   const payload = {
@@ -1143,8 +1166,12 @@ async function generateNow(){
 async function copyHtml(){
   const box = document.getElementById("outHtml");
   if (!box || !box.value.trim()) return toast("Generate first");
-  await navigator.clipboard.writeText(box.value);
-  toast("Copied");
+  try{
+    await navigator.clipboard.writeText(box.value);
+    toast("Copied");
+  }catch{
+    toast("Clipboard blocked (click inside output, Ctrl+A then Ctrl+C)");
+  }
 }
 
 function downloadHtml(){
@@ -1255,10 +1282,13 @@ document.addEventListener("keydown", (e)=>{
 
 /* Boot */
 async function boot(showToast=true){
-  if (!API_URL || API_URL.includes("https://script.google.com/macros/s/AKfycbw5s7R5FFQBNKqmQPwNl-jSa6g987HeyXS2eMDR1Y2H9pq5XUEn4QHnqGA5-B8cXAelEw/exec")){
-    document.getElementById("list").innerHTML = `<div class="hint"><b>API_URL not set.</b><br>Paste your Apps Script Web App URL into staging.html.</div>`;
+  if (!API_URL || API_URL.includes(PLACEHOLDER)){
+    document.getElementById("list").innerHTML =
+      `<div class="hint"><b>API_URL not set.</b><br>
+      Paste your Apps Script Web App <b>/exec</b> URL into <code>API_URL</code> at the top of this file.</div>`;
     return;
   }
+
   try{
     loadPhotos();
     const dd = await apiGet({ action:"getDropdowns" });
@@ -1268,9 +1298,12 @@ async function boot(showToast=true){
     renderKPIs();
     if (showToast) toast("Connected to sheet");
   }catch(err){
-    document.getElementById("list").innerHTML = `<div class="hint"><b>API error.</b><br>${escapeHtml(err.message || String(err))}</div>`;
+    document.getElementById("list").innerHTML =
+      `<div class="hint"><b>API error.</b><br>${escapeHtml(err.message || String(err))}<br><br>
+      <b>Tip:</b> confirm your Apps Script is deployed as a Web App with access set appropriately.</div>`;
   }
 }
+
 boot();
 </script>
 </body>
